Redis 설정 추가회사명을 기반으로 배당금 정보 캐시 사용 하여 조회 기능 추가